# lab4

./: CMakeLists.txt  Makefile
src/: calculator.cpp  main.cpp
